--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     implementation('com.github.bumptech.glide:glide:4.5.0') {
         exclude group: "com.android.support"
     }
+    //OkHTTP
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
