--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation project(':pangu')
     //最低支持API16
     implementation 'com.android.support:support-v4:26.1.0'
-//    implementation 'com.airbnb.android:lottie:2.2.0'
+    implementation 'com.airbnb.android:lottie:2.2.0'
     implementation('com.github.bumptech.glide:glide:4.5.0') {
         exclude group: "com.android.support"
     }
