--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     signingConfigs {
@@ -52,4 +53,6 @@ dependencies {
     }
     //OkHTTP
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    //GreenDao
+    implementation 'org.greenrobot:greendao:3.2.2'
 }
