--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
@@ -59,5 +59,6 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
     implementation files('libs/Lemap.jar')
     implementation files('libs/hitownsdk.jar')
-
+    //自适应字体
+    implementation 'com.github.AndroidDeveloperLB:AutoFitTextView:4'
 }
