--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name=".MyApplication"
+        android:name="activity.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -29,25 +29,25 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".RecyclerActivity" />
-        <activity android:name=".RxActivity" />
-        <activity android:name=".PrintTableActivity" />
-        <activity
-            android:name=".LaunchActivity"
-            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+            android:name="activity.main.MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RfidActivity" />
-        <activity android:name=".DialogActivity" />
-        <activity android:name=".PermissionActivity" />
-        <activity android:name=".ReverseActivity" />
-        <activity android:name=".IdCardActivity" />
+        <activity android:name="activity.recycler.RecyclerActivity" />
+        <activity android:name="activity.rfidPower.RxActivity" />
+        <activity android:name="activity.printTable.PrintTableActivity" />
+        <activity
+            android:name="activity.customView.CustomActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name="activity.rfidState.RfidActivity" />
+        <activity android:name="activity.dialog.DialogActivity" />
+        <activity android:name="activity.permission.PermissionActivity" />
+        <activity android:name="activity.reverse.ReverseActivity" />
+        <activity android:name="activity.dataBaseTest.DataBaseTestActivity" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -60,8 +60,7 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".SongCiActivity" />
-        <activity android:name=".UiCalcActivity"></activity>
+        <activity android:name="activity.songCi.SongCiActivity" />
     </application>
 
 </manifest>
